E-learning/force-app/main/default/objects/Trail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description about the content in the trail</description>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>