E-learning/force-app/main/default/objects/Trail__c/validationRules/Validation_module_activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_module_activation</fullName>
    <active>true</active>
    <description>No se debe permitir vincular un Módulo inactivo a un Trail.</description>
    <errorConditionFormula>IF(  NOT($ObjectType.Module__c.Fields.Active__c == true)  , true, false)</errorConditionFormula>
    <errorMessage>You cannot link a module inactive</errorMessage>
</ValidationRule>