E-learning/force-app/main/default/objects/Trail__c/listViews/Completed_trails.listView-meta.xml
<ListView>
    <fullName>Completed_trails</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Completed trails</label>
</ListView>